<resources>
    <string name="app_name">Florid Medicos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">doctors</string>
    <string name="search_hint">Doctors..</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_spalsh">SpalshActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string-array name="doctorSpeciality">

        <item>FAMILY PHYSICIAN</item>
        <item>PHYSICIAN</item>
        <item>PAEDRIATICS</item>
        <item>CHEST SPECIALIST</item>
        <item>OBS</item>
        <item>DCH</item>
        <item>GASTROENTROLOGIST</item>
        <item>FAMILY MEDICINE</item>
        <item>GENERAL PHYSICIAN</item>
        <item>NEUROLOGY</item>
        <item>INTERNAL MEDICINE</item>
        <item>CARDIOLOGIST</item>
        <item>OBES.MANG.</item>
        <item>D.A.</item>
        <item>NEURO SURGERY</item>
        <item>UROLOGY</item>
        <item>G.I. SURGERY</item>
        <item>CARDIAC SURGEON</item>
        <item>NEPHROLOGY</item>
        <item>ONCOLOGY</item>
        <item>NUCLEAR MEDICINE</item>
        <item>ONCOSURGEON</item>
        <item>CONSULTANT PHYSICIAN</item>


    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_blood_bank">BloodBankActivity</string>
    <string name="title_activity_medical">medicalActivity</string>
    <string name="message_hint">Type any message</string>
    <string name="send">send</string>
    <string name="profile_me">my profile pic</string>
    <string name="profile_other">another people profile pic</string>
    <string name="city">Enter city name</string>
    <string name="Search">search</string>

    <string-array name="state">

        <item>Gujarat</item>
        <item>Maharashtra</item>
        <item>Mizoram</item>
        <item>Rajasthan</item>
        <item>Kerala</item>
        <item>Haryana</item>
        <item>Tamil Nadu</item>
        <item>Orissa</item>
        <item>West Bengal</item>
        <item>Delhi</item>
        <item>Karnataka</item>
        <item>Goa</item>
        <item>Bihar</item>
        <item>Rajsthan</item>
        <item>Madhya Pradesh</item>
        <item>Punjab</item>
        <item>Chhattisgarh</item>
        <item>Jharkhand</item>
        <item>Chandigarh</item>
        <item>Uttarakhand</item>
        <item>Himachal Pradesh</item>
        <item>Assam</item>
        <item>Telangana</item>
        <item>Uttar Pradesh</item>


    </string-array>
    <string name="title_activity_hospital_details">HospitalDetailsActivity</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="type_here">write prescription here</string>
    <string name="time">Select time slot for medicine.\nPatient receive alarm at this time with prescription.
    </string>
    <string name="medTime">Example 9:00</string>
    <string name="patientEmail">Enter User name of patient</string>
    <string name="cpyright">copyright by webAndrioz.com</string>

</resources>
