<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="genero.dexterous.com.almanac.doctor.PrefActivity"
    tools:showIn="@layout/activity_pref"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="To,"
            android:textSize="25dp"
            />

        <EditText
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:padding="0dp"
            android:hint="@string/patientEmail"
            android:id="@+id/prefToMail"

            />

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"

    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:padding="0dp"
        android:hint="@string/type_here"
        android:id="@+id/prefEdit"

        />



</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="22dp"

            />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:lines="1"
            android:padding="0dp"
            android:hint="@string/medTime"
            android:id="@+id/time1"

            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:lines="1"
            android:padding="0dp"
            android:hint="@string/medTime"
            android:id="@+id/time2"

            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:lines="1"
            android:padding="0dp"
            android:hint="@string/medTime"
            android:id="@+id/time3"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendPref"
            android:text="@string/send"

            />
    </LinearLayout>




</LinearLayout>

</ScrollView>